ver 0.2.5
- Added check mode (You can check which versions are the same format as your assets)
- Fixed an error when loading assets corrupted by name table editing
- Modified comparison function

ver 0.2.4
- Added support for UE4.25 games
- Added support for UE4.26 games
- Minor updates for GUI

ver 0.2.3
- Added support for GUI
- Made folder loader recursive
- Modified data structure
- Improved readability

ver 0.2.2
- Added support for Bloodstained

ver 0.2.1
- Added support for UE4.27 games
- Added support for cube maps
- Fixed an error when loading some assets.

ver 0.2.0
- Added support for UE4.18 and UE4.19 games

ver 0.1.7
- Added support for .DDS
- Added feature to specify files in txt
- Fixed an error when loading some assets

ver 0.1.6
- Added support for BC7, DXT5/BC3, BC1
- Removed header files

ver 0.1.5
- Ignored sign when importing BC6H
- Added support for B8G8R8A8(sRGB)

ver 0.1.4
 - Added support for BC6H(unsigned)
 - Added support for any size mipmaps (no need to use power of 2 as height and width)

ver 0.1.3
 - Added export function
 - Bugfix

ver 0.1.2
 - Added support for ATI1 and ATI2

ver 0.1.1
 - Allow an folder as input.

ver 0.1.0
 - Initial version